packages/build/tests/error/fixtures/plugin_error_to_json/plugin.js
export const onPreBuild = function ({
  utils: {
    build: { failBuild },
  },
}) {
  const error = new Error('test')
  error.toJSON = () => ({})
  failBuild('message', { error })
}
